# EDRP

./: .gitignore  .replit  Readme.md  alembic.ini  openapi.json  pyproject.toml  requirements.txt  trial.txt
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: academics.py  attendance.py  auth.py  communication.py  custom_fields.py  finance.py  notifications.py  onboarding.py  parents.py  schools.py  students.py  teachers.py  users.py
app/middleware/: authentication.py  logging.py
app/models/: __init__.py  academics.py  attendance.py  communication.py  custom_fields.py  finance.py  notifications.py  schools.py  users.py
app/schemas/: academics.py  attendance.py  communication.py  custom_fields.py  finance.py  notifications.py  onboarding.py  parents.py  schools.py  students.py  users.py
app/services/: auth.py  cloudinary.py  gps.py  payments.py
attached_assets/: Pasted--Staff-Onboarding-School-Join-Code-Feature-This-is-for-a-school-management-system-where-each-schoo-1747740335399.txt  Pasted--Table-schools-CREATE-TABLE-schools-id-SERIAL-PRIMARY-KEY-name-VARCHAR-255-NOT-NUL-1747732850103.txt  Pasted-Certainly-Here-s-a-clean-explanation-of-the-missing-or-partially-covered-features-in-your-School-ER-1747736069244.txt  Pasted-Prompt-Build-a-Production-Ready-Backend-for-a-School-ERP-System-Using-FastAPI-PostgreSQL-Project--1747732814060.txt
migrations/: README.md
